Revert "fix: remove unwanted expands/wraps on input tags"
This reverts commit 7e557242

--- a/resources/assets/css/_forms.css
+++ b/resources/assets/css/_forms.css
@@ -227,7 +227,7 @@
 }
 
 .taggle_input {
-    @apply w-0 my-1 bg-none;
+    @apply max-w-full my-1 bg-none;
 }
 
 .taggle_sizer {
